--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,6 +15,8 @@ jobs:
     permissions:
       checks: write
       contents: read
+      issues: write
+      pull-requests: write
     strategy:
       fail-fast: false
       matrix:
