--- a/config/config.json
+++ b/config/config.json
@@ -40,6 +40,23 @@
     "temperature_sensors": 8,
     "sampling_rate_hz": 100
   },
+  "imu": {
+    "sensor_type": "mpu6050",
+    "i2c_address": 104,
+    "i2c_bus": 1,
+    "sampling_rate_hz": 100.0,
+    "simulation_mode": true,
+    "calibration_samples": 100,
+    "accel_offset_x": 0.0,
+    "accel_offset_y": 0.0,
+    "accel_offset_z": 0.0,
+    "gyro_offset_x": 0.0,
+    "gyro_offset_y": 0.0,
+    "gyro_offset_z": 0.0,
+    "mag_offset_x": 0.0,
+    "mag_offset_y": 0.0,
+    "mag_offset_z": 0.0
+  },
   "temperature_sensors": {
     "enabled": true,
     "cells_per_group": 12,
